--- a/web.html
+++ b/web.html
@@ -3,7 +3,6 @@
   <head>
     <title>My Webpage !</title>
     <body>
-        HHHHHHHHHHHHH
-        You cock sucker !
+        you are so ugly !
     </body>
   </head>
